// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render PlaceCard PlaceCard render correctly NEAR 1`] = `
<article
  className="place-card near-places__card"
  onMouseOver={[Function]}
>
  <div
    className="place-card__image-wrapper near-places__image-wrapper"
  >
    <a
      href="#"
    >
      <img
        alt="Nice, cozy, warm big bed apartment"
        className="place-card__image"
        height="200"
        src="img/apartment-01.jpg"
        width="260"
      />
    </a>
  </div>
  <div
    className="place-card__info"
  >
    <div
      className="place-card__price-wrapper"
    >
      <div
        className="place-card__price"
      >
        <b
          className="place-card__price-value"
        >
          €
          80
        </b>
        <span
          className="place-card__price-text"
        >
          / night
        </span>
      </div>
      <button
        className="place-card__bookmark-button button"
        onClick={[Function]}
        type="button"
      >
        <SvgrURL
          height="18"
          width="17"
        />
        <span
          className="visually-hidden"
        >
          To bookmarks
        </span>
      </button>
    </div>
    <div
      className="place-card__rating rating"
    >
      <div
        className="place-card__stars rating__stars"
      >
        <span
          style={
            Object {
              "width": "80%",
            }
          }
        />
        <span
          className="visually-hidden"
        >
          Rating
        </span>
      </div>
    </div>
    <h2
      className="place-card__name"
    >
      <a
        onClick={[Function]}
      >
        Nice, cozy, warm big bed apartment
      </a>
    </h2>
    <p
      className="place-card__type"
    >
      Private Room
    </p>
  </div>
</article>
`;

exports[`Render PlaceCard PlaceCard render correctly with Premium 1`] = `
<article
  className="place-card cities__place-card"
  onMouseOver={[Function]}
>
  <div
    className="place-card__mark"
  >
    <span>
      Premium
    </span>
  </div>
  <div
    className="place-card__image-wrapper cities__image-wrapper"
  >
    <a
      href="#"
    >
      <img
        alt="Canal View Prinsengracht"
        className="place-card__image"
        height="200"
        src="img/apartment-01.jpg"
        width="260"
      />
    </a>
  </div>
  <div
    className="place-card__info"
  >
    <div
      className="place-card__price-wrapper"
    >
      <div
        className="place-card__price"
      >
        <b
          className="place-card__price-value"
        >
          €
          280
        </b>
        <span
          className="place-card__price-text"
        >
          / night
        </span>
      </div>
      <button
        className="place-card__bookmark-button button"
        onClick={[Function]}
        type="button"
      >
        <SvgrURL
          height="18"
          width="17"
        />
        <span
          className="visually-hidden"
        >
          To bookmarks
        </span>
      </button>
    </div>
    <div
      className="place-card__rating rating"
    >
      <div
        className="place-card__stars rating__stars"
      >
        <span
          style={
            Object {
              "width": "80%",
            }
          }
        />
        <span
          className="visually-hidden"
        >
          Rating
        </span>
      </div>
    </div>
    <h2
      className="place-card__name"
    >
      <a
        onClick={[Function]}
      >
        Canal View Prinsengracht
      </a>
    </h2>
    <p
      className="place-card__type"
    >
      House
    </p>
  </div>
</article>
`;

exports[`Render PlaceCard PlaceCard render correctly without Premium 1`] = `
<article
  className="place-card cities__place-card"
  onMouseOver={[Function]}
>
  <div
    className="place-card__image-wrapper cities__image-wrapper"
  >
    <a
      href="#"
    >
      <img
        alt="Nice, cozy, warm big bed apartment"
        className="place-card__image"
        height="200"
        src="img/apartment-01.jpg"
        width="260"
      />
    </a>
  </div>
  <div
    className="place-card__info"
  >
    <div
      className="place-card__price-wrapper"
    >
      <div
        className="place-card__price"
      >
        <b
          className="place-card__price-value"
        >
          €
          80
        </b>
        <span
          className="place-card__price-text"
        >
          / night
        </span>
      </div>
      <button
        className="place-card__bookmark-button button"
        onClick={[Function]}
        type="button"
      >
        <SvgrURL
          height="18"
          width="17"
        />
        <span
          className="visually-hidden"
        >
          To bookmarks
        </span>
      </button>
    </div>
    <div
      className="place-card__rating rating"
    >
      <div
        className="place-card__stars rating__stars"
      >
        <span
          style={
            Object {
              "width": "80%",
            }
          }
        />
        <span
          className="visually-hidden"
        >
          Rating
        </span>
      </div>
    </div>
    <h2
      className="place-card__name"
    >
      <a
        onClick={[Function]}
      >
        Nice, cozy, warm big bed apartment
      </a>
    </h2>
    <p
      className="place-card__type"
    >
      Private Room
    </p>
  </div>
</article>
`;
